# todo.hs

./: .gitignore  FilePaths.hs  Main.hs  Makefile  README.md  TODO.md  Todo.hs  TodoUtils.hs  cabal.sandbox.config  dev-todo.txt  set_dev_todo_file_paths.sh  t  t.hs  t.txt.sample  todo-hs.cabal  todo-txt.hs  todo.txt.sample  todoHs.cabal  todoTxt.hs
Todo/: Actions.hs  File.hs  List.hs  Marshalling.hs  Todo.hs  TodoUtils.hs  Utils.hs
TodoList/: Actions.hs  FilePaths.hs  List.hs  Marshalling.hs  Todo.hs  Utils.hs
src/: FilePaths.hs  Main.hs  Todo.hs  Utils.hs
src/List/: Actions.hs  List.hs
src/ToDo/: FilePaths.hs  ListActions.hs  Marshalling.hs  Todo.hs  TodoFile.hs  Types.hs  Utils.hs
src/ToDo/List/: List.hs
src/TodoList/: Actions.hs  File.hs  List.hs  Marshalling.hs  Todo.hs  Utils.hs
