name:                todoHs
version:             0.1.0.0
synopsis:            "An efficient todo.txt manager"
license:             MIT
license-file:        LICENSE

author:              Martino Visintin
maintainer:          vise890@gmail.com

build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable t
  hs-source-dirs:      src
  main-is:             Main.hs

  other-modules:       List.Actions
                       List.List
                       Marshalling
                       TodoFile
                       Todo
                       Utils

  build-depends:       base >=4.7 && <4.8,
                       directory >=1.2 && <1.3,
                       process >=1.2 && <1.3,
                       containers >=0.5 && <0.6,
                       ansi-terminal >=0.6 && <0.7

  default-language:    Haskell2010
